--- a/src/main/resources/org/example/demo/hello-view.fxml
+++ b/src/main/resources/org/example/demo/hello-view.fxml
@@ -1,16 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.example.demo.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1022.0" prefWidth="1440.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <AnchorPane prefHeight="400.0" prefWidth="300.0">
+         <children>
+            <ImageView fitHeight="1022.0" fitWidth="735.0" pickOnBounds="true">
+               <image>
+                  <Image url="@file:380263196_1029616164859701_6755985423599262347_n.jpg" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+      <Button layoutX="806.0" layoutY="735.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="565.0" style="-fx-background-radius: 15; -fx-font-weight: bold;" text="SIGN IN">
+         <font>
+            <Font size="24.0" />
+         </font></Button>
+      <Label layoutX="806.0" layoutY="285.0" style="-fx-font-weight: bold; -fx-font-style: italic;" text="Manager">
+         <font>
+            <Font size="20.0" />
+         </font></Label>
+      <Label layoutX="942.0" layoutY="285.0" style="-fx-font-style: italic;" text="Staff">
+         <font>
+            <Font size="20.0" />
+         </font></Label>
+      <Label layoutX="806.0" layoutY="46.0" style="-fx-underline: true; -fx-font-style: italic; -fx-font-weight: bold;" text="Login">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <VBox layoutX="806.0" layoutY="329.0" prefHeight="91.0" prefWidth="565.0">
+         <children>
+            <Label text="Company">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <TextField prefHeight="54.0" prefWidth="565.0" promptText="Name of company" style="-fx-background-radius: 5;" />
+         </children>
+      </VBox>
+      <VBox layoutX="806.0" layoutY="554.0" prefHeight="91.0" prefWidth="565.0">
+         <children>
+            <Label text="Password">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <TextField prefHeight="54.0" prefWidth="565.0" promptText="Password" style="-fx-background-radius: 5;" />
+         </children>
+      </VBox>
+      <VBox layoutX="806.0" layoutY="438.0" prefHeight="91.0" prefWidth="565.0">
+         <children>
+            <Label text="Account">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <TextField prefHeight="54.0" prefWidth="565.0" promptText="Email or user name" style="-fx-background-radius: 5;" />
+         </children>
+      </VBox>
+   </children>
+</AnchorPane>
