check-login (Chưa phan role) xoa company tao hieu ung truot cho image chuyen qua lai giua staff va manager trong login

--- a/src/main/resources/org/example/demo/Customer.fxml
+++ b/src/main/resources/org/example/demo/Customer.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1022.0" prefWidth="1440.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.HelloController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1022.0" prefWidth="1440.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
       <VBox layoutX="39.0" layoutY="148.0" prefHeight="125.0" prefWidth="1371.0">
          <children>
