--- a/src/main/resources/org/example/demo/hello-view.fxml
+++ b/src/main/resources/org/example/demo/hello-view.fxml
@@ -9,18 +9,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1022.0" prefWidth="1440.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1022.0" prefWidth="1440.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo.HelloController">
    <children>
-      <AnchorPane prefHeight="400.0" prefWidth="300.0">
-         <children>
-            <ImageView fitHeight="1022.0" fitWidth="735.0" pickOnBounds="true">
-               <image>
-                  <Image url="@file:380263196_1029616164859701_6755985423599262347_n.jpg" />
-               </image>
-            </ImageView>
-         </children>
-      </AnchorPane>
-      <Button layoutX="806.0" layoutY="735.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="565.0" style="-fx-background-radius: 15; -fx-font-weight: bold;" text="SIGN IN">
+      <Button fx:id="signinbutton" layoutX="806.0" layoutY="587.0" mnemonicParsing="false" onAction="#checklogin" prefHeight="68.0" prefWidth="565.0" style="-fx-background-radius: 15; -fx-font-weight: bold;" text="SIGN IN">
          <font>
             <Font size="24.0" />
          </font></Button>
@@ -29,45 +20,84 @@
             <Font size="36.0" />
          </font>
       </Label>
-      <VBox layoutX="806.0" layoutY="329.0" prefHeight="91.0" prefWidth="565.0">
-         <children>
-            <Label style="-fx-font-weight: bold;" text="Company">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <TextField prefHeight="54.0" prefWidth="565.0" promptText="Name of company" style="-fx-background-radius: 5;" />
-         </children>
-      </VBox>
-      <VBox layoutX="806.0" layoutY="554.0" prefHeight="91.0" prefWidth="565.0">
+      <VBox layoutX="806.0" layoutY="465.0" prefHeight="91.0" prefWidth="565.0">
          <children>
             <Label style="-fx-font-weight: bold;" text="Password">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField prefHeight="54.0" prefWidth="565.0" promptText="Password" style="-fx-background-radius: 5;" />
+            <TextField fx:id="manapassword" prefHeight="54.0" prefWidth="565.0" promptText="Password" style="-fx-background-radius: 5;" />
          </children>
       </VBox>
-      <VBox layoutX="806.0" layoutY="438.0" prefHeight="91.0" prefWidth="565.0">
+      <VBox layoutX="806.0" layoutY="357.0" prefHeight="91.0" prefWidth="565.0">
          <children>
             <Label style="-fx-font-weight: bold;" text="Account">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField prefHeight="54.0" prefWidth="565.0" promptText="Email or user name" style="-fx-background-radius: 5;" />
+            <TextField fx:id="manaccount" prefHeight="54.0" prefWidth="565.0" promptText="Email or user name" style="-fx-background-radius: 5;" />
          </children>
       </VBox>
-      <Button layoutX="806.0" layoutY="249.0" mnemonicParsing="false" style="-fx-font-weight: bold; -fx-background-color: transparent; -fx-font-style: italic; -fx-underline: true;" text="Manager">
+      <Button fx:id="manapicked" layoutX="806.0" layoutY="249.0" mnemonicParsing="false" style="-fx-font-weight: bold; -fx-background-color: transparent; -fx-font-style: italic; -fx-underline: true; -fx-font-size: 24;" text="Manager">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
-      <Button layoutX="953.0" layoutY="249.0" mnemonicParsing="false" style="-fx-font-weight: bold; -fx-background-color: transparent; -fx-font-style: italic; -fx-underline: false;" text="Staff">
+      <Button fx:id="staffunpick" layoutX="953.0" layoutY="249.0" mnemonicParsing="false" onAction="#testklaralefttoright" style="-fx-font-weight: bold; -fx-background-color: transparent; -fx-font-style: italic; -fx-underline: false; -fx-font-size: 24;" text="Staff">
          <font>
             <Font size="24.0" />
          </font>
       </Button>
+      <AnchorPane prefHeight="400.0" prefWidth="300.0">
+         <children>
+            <Button fx:id="signinbutton1" layoutX="86.0" layoutY="587.0" mnemonicParsing="false" onAction="#checklogin" prefHeight="68.0" prefWidth="565.0" style="-fx-background-radius: 15; -fx-font-weight: bold;" text="SIGN IN">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Button>
+            <Label layoutX="86.0" layoutY="49.0" style="-fx-underline: true; -fx-font-style: italic; -fx-font-weight: bold;" text="Login">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Label>
+            <VBox layoutX="86.0" layoutY="465.0" prefHeight="91.0" prefWidth="565.0">
+               <children>
+                  <Label style="-fx-font-weight: bold;" text="Password">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="manapassword1" prefHeight="54.0" prefWidth="565.0" promptText="Password" style="-fx-background-radius: 5;" />
+               </children>
+            </VBox>
+            <VBox layoutX="86.0" layoutY="357.0" prefHeight="91.0" prefWidth="565.0">
+               <children>
+                  <Label style="-fx-font-weight: bold;" text="Account">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="manaccount1" prefHeight="54.0" prefWidth="565.0" promptText="Email or user name" style="-fx-background-radius: 5;" />
+               </children>
+            </VBox>
+            <Button fx:id="manaunpick" layoutX="86.0" layoutY="252.0" mnemonicParsing="false" onAction="#testklararighttoleft" style="-fx-font-weight: bold; -fx-background-color: transparent; -fx-font-style: italic; -fx-font-size: 24;" text="Manager">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Button>
+            <Button fx:id="staffpicked" layoutX="266.0" layoutY="252.0" mnemonicParsing="false" style="-fx-font-weight: bold; -fx-background-color: transparent; -fx-font-style: italic; -fx-underline: true; -fx-font-size: 24;" text="Staff">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
+      <ImageView fx:id="klara" fitHeight="1022.0" fitWidth="720.0" layoutY="-7.0" pickOnBounds="true">
+         <image>
+            <Image url="@file:380263196_1029616164859701_6755985423599262347_n.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
