--- a/src/main/resources/View/hello-view.fxml
+++ b/src/main/resources/View/hello-view.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1022.0" prefWidth="1440.0" style="-fx-background-color: FFF5E0;" styleClass="button1" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.HelloController">
    <children>
-      <Button fx:id="signinbutton" layoutX="806.0" layoutY="587.0" mnemonicParsing="false" onAction="#checklogin" prefHeight="68.0" prefWidth="565.0" style="-fx-background-radius: 30; -fx-text-fill: White; -fx-font-weight: bold; -fx-background-color: black;" text="SIGN IN">
+      <Button fx:id="signinbutton" layoutX="806.0" layoutY="587.0" mnemonicParsing="false" onAction="#checklogin" prefHeight="68.0" prefWidth="565.0" style="-fx-background-radius: 30; -fx-text-fill: White; -fx-font-weight: bold; -fx-background-color: black;" stylesheets="@hello-view.css" text="SIGN IN">
          <font>
             <Font size="24.0" />
          </font></Button>
