--- a/src/main/resources/View/hello-view.fxml
+++ b/src/main/resources/View/hello-view.fxml
@@ -6,98 +6,135 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1022.0" prefWidth="1440.0" style="-fx-background-color: FFF5E0;" styleClass="button1" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.HelloController">
-   <children>
-      <Button fx:id="signinbutton" layoutX="806.0" layoutY="587.0" mnemonicParsing="false" onAction="#checklogin" prefHeight="68.0" prefWidth="565.0" style="-fx-background-radius: 30; -fx-text-fill: White; -fx-font-weight: bold; -fx-background-color: black;" stylesheets="@hello-view.css" text="SIGN IN">
-         <font>
-            <Font size="24.0" />
-         </font></Button>
-      <Label layoutX="806.0" layoutY="46.0" style="-fx-underline: true; -fx-font-style: italic; -fx-font-weight: bold;" text="Login">
-         <font>
-            <Font size="36.0" />
-         </font>
-      </Label>
-      <VBox layoutX="806.0" layoutY="465.0" prefHeight="91.0" prefWidth="565.0">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1022.0" prefWidth="1440.0" style="-fx-background-radius: 10;" styleClass="anchor" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.HelloController">
+    <children>
+      <AnchorPane disable="true" layoutX="735.0" layoutY="3.0" prefHeight="1020.0" prefWidth="705.0" visible="false">
          <children>
-            <Label style="-fx-font-weight: bold;" text="Password">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <TextField fx:id="manapassword" prefHeight="54.0" prefWidth="565.0" promptText="Password" style="-fx-background-radius: 5;" />
-         </children>
-      </VBox>
-      <VBox layoutX="806.0" layoutY="357.0" prefHeight="91.0" prefWidth="565.0">
-         <children>
-            <Label style="-fx-font-weight: bold;" text="Account">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <TextField fx:id="manaccount" prefHeight="54.0" prefWidth="565.0" promptText="Email or user name" style="-fx-background-radius: 5;" styleClass="txtfield" stylesheets="@../../java/CSS/hello-view.css" />
-         </children>
-      </VBox>
-      <Button fx:id="manapicked" layoutX="806.0" layoutY="249.0" mnemonicParsing="false" style="-fx-font-weight: bold; -fx-background-color: transparent; -fx-font-style: italic; -fx-underline: true; -fx-font-size: 24;" styleClass="head-button" text="MANAGER">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <Button fx:id="staffunpick" layoutX="953.0" layoutY="249.0" mnemonicParsing="false" onAction="#testklaralefttoright" style="-fx-font-weight: bold; -fx-background-color: transparent; -fx-font-style: italic; -fx-underline: false; -fx-font-size: 24;" text="STAFF">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Button>
-      <AnchorPane prefHeight="400.0" prefWidth="300.0">
-         <children>
-            <Button fx:id="signinbutton1" layoutX="86.0" layoutY="587.0" mnemonicParsing="false" onAction="#checklogin" prefHeight="68.0" prefWidth="565.0" style="-fx-background-radius: 15; -fx-font-weight: bold;" text="SIGN IN">
-               <font>
-                  <Font size="24.0" />
-               </font>
+              <Button fx:id="signinbutton" layoutX="78.0" layoutY="743.0" mnemonicParsing="false" onAction="#checklogin" prefHeight="68.0" prefWidth="565.0" style="-fx-background-radius: 30;" styleClass="sign-in_btn" text="SIGN IN">
+                  <font>
+                      <Font name="Inter Black" size="24.0" />
+                  </font>
             </Button>
-            <Label layoutX="86.0" layoutY="49.0" style="-fx-underline: true; -fx-font-style: italic; -fx-font-weight: bold;" text="Login">
+            <Pane layoutX="74.0" layoutY="104.0" prefHeight="10.0" prefWidth="100.0" style="-fx-background-radius: 10;" styleClass="under_line" />
+              <Label layoutX="73.0" layoutY="54.0" text="LOGIN">
+                  <font>
+                      <Font name="Inter Black" size="42.0" />
+                  </font>
+              </Label>
+              <Button fx:id="manapicked" layoutX="56.0" layoutY="222.0" mnemonicParsing="false" style="-fx-underline: true;" styleClass="switch-btn" text="Manager">
+                  <font>
+                      <Font name="Inter Black" size="24.0" />
+                  </font>
+              </Button>
+              <Button fx:id="staffunpick" layoutX="194.0" layoutY="223.0" mnemonicParsing="false" onAction="#testklaralefttoright" styleClass="switch-btn" text="Staff">
+                  <font>
+                      <Font name="Inter Bold" size="24.0" />
+                  </font>
+              </Button>
+                <Label layoutX="86.0" layoutY="353.0" text="Account">
+                    <font>
+                        <Font name="Inter Medium" size="20.0" />
+                    </font>
+                </Label>
+                <TextField fx:id="manaccount" layoutX="74.0" layoutY="383.0" prefHeight="54.0" prefWidth="565.0" promptText="Email or user name" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd" />
+                <Label layoutX="85.0" layoutY="486.0" text="Password">
+                    <font>
+                        <Font name="Inter Medium" size="20.0" />
+                    </font>
+                </Label>
+                <TextField fx:id="manapassword" layoutX="74.0" layoutY="515.0" prefHeight="54.0" prefWidth="567.0" promptText="Password" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd" />
+         </children>
+      </AnchorPane>
+        <AnchorPane prefHeight="1025.0" prefWidth="722.0">
+            <children>
+                <Button fx:id="signinbutton1" layoutX="81.0" layoutY="742.0" mnemonicParsing="false" onAction="#checklogin" prefHeight="68.0" prefWidth="565.0" style="-fx-background-radius: 30;" styleClass="sign-in_btn" text="SIGN UP">
+                    <font>
+                        <Font name="Inter Black" size="24.0" />
+                    </font>
+                </Button>
+                <Label layoutX="86.0" layoutY="50.0" text="REGISTER">
+                    <font>
+                        <Font name="Inter Black" size="42.0" />
+                    </font>
+                </Label>
+                <Button fx:id="manaunpick" layoutX="83.0" layoutY="252.0" mnemonicParsing="false" onAction="#testklararighttoleft" styleClass="switch-btn" text="Manager">
+                    <font>
+                        <Font name="Inter Bold" size="24.0" />
+                    </font>
+                </Button>
+            <Pane layoutX="88.0" layoutY="100.0" prefHeight="10.0" prefWidth="150.0" style="-fx-background-radius: 10;" styleClass="under_line" />
+                  <Label layoutX="93.0" layoutY="352.0" text="Account">
+                      <font>
+                          <Font name="Inter Medium" size="20.0" />
+                      </font>
+                  </Label>
+                  <TextField fx:id="manaccount1" layoutX="79.0" layoutY="381.0" prefHeight="54.0" prefWidth="565.0" promptText="Email or user name" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd" />
+                  <Label layoutX="91.0" layoutY="488.0" text="Password">
+                      <font>
+                          <Font name="Inter Medium" size="20.0" />
+                      </font>
+                  </Label>
+                  <TextField fx:id="manapassword1" layoutX="81.0" layoutY="517.0" prefHeight="54.0" prefWidth="565.0" promptText="Password" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd" />
+            </children>
+        </AnchorPane>
+      <AnchorPane prefHeight="1022.0" prefWidth="738.0" styleClass="anchor_child">
+         <children>
+            <ImageView fitHeight="510.0" fitWidth="680.0" layoutX="24.0" layoutY="136.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Picture/Shop%20Management.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="178.0" layoutY="676.0" text="SHOP MANAGEMENT" textFill="WHITE">
                <font>
-                  <Font size="36.0" />
+                  <Font name="Inter SemiBold" size="35.0" />
                </font>
             </Label>
-            <VBox layoutX="86.0" layoutY="465.0" prefHeight="91.0" prefWidth="565.0">
-               <children>
-                  <Label style="-fx-font-weight: bold;" text="Password">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="manapassword1" prefHeight="54.0" prefWidth="565.0" promptText="Password" style="-fx-background-radius: 5;" />
-               </children>
-            </VBox>
-            <VBox layoutX="86.0" layoutY="357.0" prefHeight="91.0" prefWidth="565.0">
-               <children>
-                  <Label style="-fx-font-weight: bold;" text="Account">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="manaccount1" prefHeight="54.0" prefWidth="565.0" promptText="Email or user name" style="-fx-background-radius: 5;" />
-               </children>
-            </VBox>
-            <Button fx:id="manaunpick" layoutX="86.0" layoutY="252.0" mnemonicParsing="false" onAction="#testklararighttoleft" style="-fx-font-weight: bold; -fx-background-color: transparent; -fx-font-style: italic; -fx-font-size: 24;" text="Manager">
+            <Button layoutX="122.0" layoutY="752.0" mnemonicParsing="false" prefHeight="73.0" prefWidth="486.0" style="-fx-background-radius: 30; -fx-border-radius: 30;" styleClass="sign-in_btn" text="CREATE ACCOUNT">
                <font>
-                  <Font size="24.0" />
-               </font>
-            </Button>
-            <Button fx:id="staffpicked" layoutX="266.0" layoutY="252.0" mnemonicParsing="false" style="-fx-font-weight: bold; -fx-background-color: transparent; -fx-font-style: italic; -fx-underline: true; -fx-font-size: 24;" text="Staff">
-               <font>
-                  <Font size="24.0" />
+                  <Font name="Inter Black" size="24.0" />
                </font>
             </Button>
          </children>
       </AnchorPane>
-      <ImageView fx:id="klara" fitHeight="1022.0" fitWidth="720.0" layoutY="-7.0" pickOnBounds="true">
-         <image>
-            <Image url="@file:380263196_1029616164859701_6755985423599262347_n.jpg" />
-         </image>
-      </ImageView>
-   </children>
+      <AnchorPane layoutX="738.0" layoutY="-1.0" prefHeight="1023.0" prefWidth="704.0">
+         <children>
+            <Button fx:id="signinbutton2" layoutX="76.0" layoutY="748.0" mnemonicParsing="false" onAction="#checklogin" prefHeight="68.0" prefWidth="565.0" style="-fx-background-radius: 30;" styleClass="sign-in_btn" text="SIGN IN">
+               <font>
+                  <Font name="Inter Black" size="24.0" />
+               </font>
+            </Button>
+            <Pane layoutX="71.0" layoutY="107.0" prefHeight="10.0" prefWidth="100.0" style="-fx-background-radius: 10;" styleClass="under_line" />
+            <Label layoutX="69.0" layoutY="58.0" text="LOGIN">
+               <font>
+                  <Font name="Inter Black" size="42.0" />
+               </font>
+            </Label>
+            <Button fx:id="manapicked1" layoutX="54.0" layoutY="226.0" mnemonicParsing="false" styleClass="switch-btn" text="Manager">
+               <font>
+                  <Font name="Inter Bold" size="24.0" />
+               </font>
+            </Button>
+            <Button fx:id="staffunpick1" layoutX="192.0" layoutY="227.0" mnemonicParsing="false" onAction="#testklaralefttoright" style="-fx-underline: true;" styleClass="switch-btn" text="Staff">
+               <font>
+                  <Font name="Inter Black" size="24.0" />
+               </font>
+            </Button>
+            <TextField fx:id="manaccount2" layoutX="71.0" layoutY="387.0" prefHeight="54.0" prefWidth="565.0" promptText="Email or user name" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd" />
+            <TextField fx:id="manapassword2" layoutX="71.0" layoutY="519.0" prefHeight="54.0" prefWidth="567.0" promptText="Password" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd" />
+            <Label layoutX="84.0" layoutY="357.0" text="Account">
+               <font>
+                  <Font name="Inter Medium" size="20.0" />
+               </font>
+            </Label>
+            <Label layoutX="82.0" layoutY="490.0" prefHeight="4.0" prefWidth="95.0" text="Password">
+               <font>
+                  <Font name="Inter Medium" size="20.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+    </children>
 </AnchorPane>
