--- a/src/main/resources/View/hello-view.fxml
+++ b/src/main/resources/View/hello-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -24,14 +25,14 @@
                       <Font name="Inter Black" size="52.0" />
                   </font>
               </Label>
-              <Button layoutX="78.0" layoutY="222.0" mnemonicParsing="false" style="-fx-underline: true;" styleClass="switch-btn" text="Manager">
+              <Button layoutX="75.0" layoutY="222.0" mnemonicParsing="false" onAction="#managerStatus" styleClass="switch-btn" text="Manager">
                   <font>
-                      <Font name="Inter Black" size="24.0" />
+                      <Font name="Inter Regular" size="24.0" />
                   </font>
               </Button>
-              <Button layoutX="216.0" layoutY="223.0" mnemonicParsing="false" styleClass="switch-btn" text="Staff">
+              <Button layoutX="213.0" layoutY="223.0" mnemonicParsing="false" onAction="#staffStatus" styleClass="switch-btn" text="Staff">
                   <font>
-                      <Font name="Inter Bold" size="24.0" />
+                      <Font name="Inter Regular" size="24.0" />
                   </font>
               </Button>
                 <Label layoutX="106.0" layoutY="353.0" text="Account">
@@ -39,18 +40,25 @@
                         <Font name="Inter Medium" size="20.0" />
                     </font>
                 </Label>
-                <TextField fx:id="mana_log_account" layoutX="98.0" layoutY="383.0" prefHeight="54.0" prefWidth="565.0" promptText="Email or user name" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd" />
+                <TextField fx:id="log_account" layoutX="98.0" layoutY="383.0" prefHeight="54.0" prefWidth="565.0" promptText="Email or user name" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd">
+               <font>
+                  <Font name="Inter Regular" size="19.0" />
+               </font></TextField>
                 <Label layoutX="104.0" layoutY="486.0" text="Password">
                     <font>
                         <Font name="Inter Medium" size="20.0" />
                     </font>
                 </Label>
-                <TextField fx:id="mana_log_password" layoutX="97.0" layoutY="516.0" prefHeight="54.0" prefWidth="567.0" promptText="Password" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd" />
+            <PasswordField fx:id="log_password" layoutX="95.0" layoutY="517.0" prefHeight="54.0" prefWidth="565.0" promptText="Password" style="-fx-background-radius: 10; -fx-border-radius: 10;" styleClass="txtfd">
+               <font>
+                  <Font name="Inter Regular" size="19.0" />
+               </font></PasswordField>
+            <Pane layoutX="93.0" layoutY="263.0" prefHeight="7.0" prefWidth="98.0" style="-fx-background-radius: 10;" styleClass="under_line" />
          </children>
       </AnchorPane>
         <AnchorPane prefHeight="1025.0" prefWidth="722.0">
             <children>
-                <Button layoutX="81.0" layoutY="742.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="565.0" style="-fx-background-radius: 30;" styleClass="sign-in_btn" text="SIGN UP">
+                <Button fx:id="signup_btn" layoutX="81.0" layoutY="742.0" mnemonicParsing="false" onAction="#registration" prefHeight="68.0" prefWidth="565.0" style="-fx-background-radius: 30;" styleClass="sign-in_btn" text="SIGN UP">
                     <font>
                         <Font name="Inter Black" size="24.0" />
                     </font>
@@ -71,13 +79,20 @@
                           <Font name="Inter Medium" size="20.0" />
                       </font>
                   </Label>
-                  <TextField layoutX="79.0" layoutY="381.0" prefHeight="54.0" prefWidth="565.0" promptText="Email or user name" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd" />
+                  <TextField fx:id="sign_account" layoutX="79.0" layoutY="381.0" prefHeight="54.0" prefWidth="565.0" promptText="Email or user name" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd">
+               <font>
+                  <Font name="Inter Regular" size="19.0" />
+               </font></TextField>
                   <Label layoutX="91.0" layoutY="488.0" text="Password">
                       <font>
                           <Font name="Inter Medium" size="20.0" />
                       </font>
                   </Label>
-                  <TextField layoutX="81.0" layoutY="517.0" prefHeight="54.0" prefWidth="565.0" promptText="Password" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd" />
+            <PasswordField fx:id="sign_password" layoutX="78.0" layoutY="519.0" prefHeight="54.0" prefWidth="565.0" promptText="Password" style="-fx-background-radius: 10; -fx-border-radius: 10;" styleClass="txtfd">
+               <font>
+                  <Font name="Inter Regular" size="19.0" />
+               </font>
+            </PasswordField>
             </children>
         </AnchorPane>
       <AnchorPane prefHeight="1024.0" prefWidth="756.0" styleClass="anchor_child">
@@ -92,48 +107,11 @@
                   <Font name="Inter SemiBold" size="35.0" />
                </font>
             </Label>
-            <Button layoutX="122.0" layoutY="741.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="500.0" style="-fx-background-radius: 30; -fx-border-radius: 30;" styleClass="sign-in_btn" text="CREATE ACCOUNT">
+            <Button layoutX="122.0" layoutY="741.0" mnemonicParsing="false" onAction="#switchPane" prefHeight="68.0" prefWidth="500.0" style="-fx-background-radius: 30; -fx-border-radius: 30;" styleClass="sign-in_btn" text="CREATE ACCOUNT">
                <font>
                   <Font name="Inter Black" size="24.0" />
                </font>
             </Button>
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="738.0" layoutY="-1.0" prefHeight="1023.0" prefWidth="704.0" visible="false">
-         <children>
-            <Button layoutX="76.0" layoutY="748.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="565.0" style="-fx-background-radius: 30;" styleClass="sign-in_btn" text="SIGN IN">
-               <font>
-                  <Font name="Inter Black" size="24.0" />
-               </font>
-            </Button>
-            <Pane layoutX="71.0" layoutY="107.0" prefHeight="10.0" prefWidth="100.0" style="-fx-background-radius: 10;" styleClass="under_line" />
-            <Label layoutX="69.0" layoutY="58.0" text="LOGIN">
-               <font>
-                  <Font name="Inter Black" size="42.0" />
-               </font>
-            </Label>
-            <Button layoutX="54.0" layoutY="226.0" mnemonicParsing="false" styleClass="switch-btn" text="Manager">
-               <font>
-                  <Font name="Inter Bold" size="24.0" />
-               </font>
-            </Button>
-            <Button layoutX="192.0" layoutY="227.0" mnemonicParsing="false" style="-fx-underline: true;" styleClass="switch-btn" text="Staff">
-               <font>
-                  <Font name="Inter Black" size="24.0" />
-               </font>
-            </Button>
-            <TextField layoutX="71.0" layoutY="387.0" prefHeight="54.0" prefWidth="565.0" promptText="Email or user name" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd" />
-            <TextField layoutX="71.0" layoutY="519.0" prefHeight="54.0" prefWidth="567.0" promptText="Password" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd" />
-            <Label layoutX="84.0" layoutY="357.0" text="Account">
-               <font>
-                  <Font name="Inter Medium" size="20.0" />
-               </font>
-            </Label>
-            <Label layoutX="82.0" layoutY="490.0" prefHeight="4.0" prefWidth="95.0" text="Password">
-               <font>
-                  <Font name="Inter Medium" size="20.0" />
-               </font>
-            </Label>
          </children>
       </AnchorPane>
     </children>
