--- a/src/main/resources/View/Employee_Main_Screen.fxml
+++ b/src/main/resources/View/Employee_Main_Screen.fxml
@@ -10,9 +10,9 @@
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <BorderPane prefHeight="200.0" prefWidth="200.0" styleClass="nav-form" stylesheets="@../../java/CSS/mainEmployee.css">
+      <BorderPane prefHeight="200.0" prefWidth="200.0">
          <top>
-            <AnchorPane prefHeight="60.0" prefWidth="600.0" styleClass="nav-header" stylesheets="@../../java/CSS/mainEmployee.css" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="60.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                <children>
                   <ImageView fitHeight="30.0" fitWidth="122.0" layoutX="14.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
                      <image>
