--- a/src/main/resources/View/hello-view.fxml
+++ b/src/main/resources/View/hello-view.fxml
@@ -14,6 +14,7 @@
     <children>
       <AnchorPane layoutX="759.0" layoutY="3.0" prefHeight="1022.0" prefWidth="754.0">
          <children>
+            <AnchorPane fx:id="switch_anchor" layoutX="85.0" layoutY="232.0" prefHeight="54.0" prefWidth="183.0" />
               <Button fx:id="sigin_btn" layoutX="93.0" layoutY="733.0" mnemonicParsing="false" onAction="#checklogin" prefHeight="68.0" prefWidth="565.0" style="-fx-background-radius: 30;" styleClass="sign-in_btn" text="SIGN IN">
                   <font>
                       <Font name="Inter Black" size="24.0" />
@@ -25,14 +26,14 @@
                       <Font name="Inter Black" size="52.0" />
                   </font>
               </Label>
-              <Button layoutX="75.0" layoutY="222.0" mnemonicParsing="false" onAction="#managerStatus" styleClass="switch-btn" text="Manager">
+              <Button fx:id="manaBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="73.0" layoutY="222.0" mnemonicParsing="false" onAction="#managerStatus" prefHeight="45.0" prefWidth="124.0" style="-fx-font-size: 24;" styleClass="selected_btn" text="Manager">
                   <font>
                       <Font name="Inter Regular" size="24.0" />
                   </font>
               </Button>
-              <Button layoutX="213.0" layoutY="223.0" mnemonicParsing="false" onAction="#staffStatus" styleClass="switch-btn" text="Staff">
+              <Button fx:id="staffBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="203.0" layoutY="222.0" mnemonicParsing="false" onAction="#staffStatus" style="-fx-font-size: 24;" styleClass="switch-btn" text="Staff">
                   <font>
-                      <Font name="Inter Regular" size="24.0" />
+                      <Font size="24.0" />
                   </font>
               </Button>
                 <Label layoutX="106.0" layoutY="353.0" text="Account">
@@ -53,7 +54,7 @@
                <font>
                   <Font name="Inter Regular" size="19.0" />
                </font></PasswordField>
-            <Pane layoutX="93.0" layoutY="263.0" prefHeight="7.0" prefWidth="98.0" style="-fx-background-radius: 10;" styleClass="under_line" />
+            <Pane fx:id="highlightPane" layoutX="72.0" layoutY="261.0" prefHeight="7.0" prefWidth="122.0" style="-fx-background-radius: 10;" styleClass="under_line" />
          </children>
       </AnchorPane>
         <AnchorPane prefHeight="1025.0" prefWidth="722.0">
