--- a/src/main/resources/View/manager.fxml
+++ b/src/main/resources/View/manager.fxml
@@ -18,36 +18,37 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="982.0" prefWidth="1512.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.managerController">
    <children>
-      <AnchorPane prefHeight="63.0" prefWidth="1512.0" styleClass="nav-header">
+      <AnchorPane prefHeight="983.0" prefWidth="1516.0" styleClass="main-background" />
+      <AnchorPane prefHeight="63.0" prefWidth="1512.0" styleClass="navbar">
          <children>
-            <ImageView fitHeight="44.0" fitWidth="127.0" layoutX="14.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="54.0" fitWidth="161.0" layoutX="11.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../Picture/Salework-logo-full.png" />
                </image>
             </ImageView>
 
-            <Label layoutX="1213.0" layoutY="20.0" text="NameLabel">
+            <Label layoutX="1288.0" layoutY="20.0" text="NameLabel">
                <font>
-                  <Font size="19.0" />
+                  <Font name="Inter SemiBold" size="19.0" />
                </font></Label>
-            <Button fx:id="homeButton" layoutX="191.0" layoutY="8.0" mnemonicParsing="false" onAction="#anchorHomeappear" prefHeight="51.0" prefWidth="135.0" text="Home">
+            <Button fx:id="homeButton" alignment="CENTER" contentDisplay="CENTER" layoutX="791.0" layoutY="2.0" mnemonicParsing="false" onAction="#anchorHomeappear" prefHeight="51.0" prefWidth="93.0" styleClass="selected_btn" text="Home">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Inter Regular" size="22.0" />
                </font>
             </Button>
-            <Button fx:id="productButton" layoutX="411.0" layoutY="3.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="135.0" text="Product">
+            <Button fx:id="productButton" alignment="CENTER" contentDisplay="CENTER" layoutX="914.0" layoutY="5.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="111.0" styleClass="switch-btn" text="Product">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Inter Regular" size="22.0" />
                </font>
             </Button>
-            <Button fx:id="staffButton" layoutX="666.0" layoutY="3.0" mnemonicParsing="false" onAction="#anchorStaffappear" prefHeight="51.0" prefWidth="135.0" text="Staff">
+            <Button fx:id="staffButton" alignment="CENTER" contentDisplay="CENTER" layoutX="1051.0" layoutY="5.0" mnemonicParsing="false" onAction="#anchorStaffappear" prefHeight="51.0" prefWidth="75.0" styleClass="switch-btn" text="Staff">
                <font>
-                  <Font size="18.0" />
+                  <Font size="22.0" />
                </font>
             </Button>
-            <Button fx:id="billButton" layoutX="891.0" layoutY="4.0" mnemonicParsing="false" onAction="#anchorBillappear" prefHeight="51.0" prefWidth="135.0" text="Bill">
+            <Button fx:id="billButton" alignment="CENTER" contentDisplay="CENTER" layoutX="1159.0" layoutY="5.0" mnemonicParsing="false" onAction="#anchorBillappear" prefHeight="51.0" prefWidth="60.0" styleClass="switch-btn" text="Bill">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Inter Regular" size="22.0" />
                </font>
             </Button>
             <Avatar fx:id="ava" accessibleRole="IMAGE_VIEW" layoutX="1413.0" layoutY="14.0">
@@ -55,12 +56,13 @@
                   <Image url="@../Picture/Ava.jpg" />
                </image>
             </Avatar>
+            <AnchorPane layoutX="792.0" layoutY="44.0" prefHeight="9.0" prefWidth="93.0" style="-fx-background-radius: 10;" styleClass="switch-pane" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="anchorHome" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0">
          <children>
-            <DatePicker layoutX="20.0" layoutY="14.0" prefHeight="43.0" prefWidth="697.0" />
-            <BarChart layoutX="14.0" layoutY="66.0" prefHeight="689.0" prefWidth="1478.0">
+            <DatePicker layoutX="32.0" layoutY="46.0" prefHeight="43.0" prefWidth="697.0" />
+            <BarChart layoutX="14.0" layoutY="115.0" prefHeight="689.0" prefWidth="1478.0">
                <xAxis>
                   <CategoryAxis side="BOTTOM" />
                </xAxis>
@@ -72,61 +74,79 @@
       </AnchorPane>
       <AnchorPane fx:id="anchorStaff" layoutX="-14.0" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0" visible="false">
          <children>
-            <Label layoutX="25.0" layoutY="15.0" text="Staff  Information">
+            <Label layoutX="43.0" layoutY="15.0" text="STAFF INFORMATION">
                <font>
                   <Font name="Inter Bold" size="36.0" />
                </font>
             </Label>
-            <Line endX="1027.0" endY="-7.62939453125E-6" layoutX="449.0" layoutY="36.0" startX="-100.0" />
-            <Label layoutX="45.0" layoutY="90.0" text="Staff ID:">
+            <Line endX="1027.0" endY="-7.62939453125E-6" layoutX="449.0" layoutY="36.0" startX="-8.078460693359375" startY="-3.0517578125E-5" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="3.0" styleClass="line-color" />
+            <Label layoutX="45.0" layoutY="96.0" text="Staff ID:">
                <font>
                   <Font name="Inter SemiBold" size="28.0" />
                </font>
             </Label>
-            <TextField layoutX="180.0" layoutY="90.0" prefHeight="35.0" prefWidth="450.0" />
-            <Label layoutX="45.0" layoutY="180.0" text="Staff ID:">
+            <TextField layoutX="180.0" layoutY="90.0" prefHeight="35.0" prefWidth="528.0" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd">
+               <font>
+                  <Font name="Inter Regular" size="22.0" />
+               </font></TextField>
+            <Label layoutX="45.0" layoutY="183.0" text="Staff ID:">
                <font>
                   <Font name="Inter SemiBold" size="28.0" />
                </font>
             </Label>
-            <TextField layoutX="180.0" layoutY="180.0" prefHeight="35.0" prefWidth="450.0" />
-            <Label layoutX="45.0" layoutY="270.0" text="Address:">
+            <TextField layoutX="180.0" layoutY="180.0" prefHeight="43.0" prefWidth="526.0" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd">
+               <font>
+                  <Font name="Inter Regular" size="22.0" />
+               </font></TextField>
+            <Label layoutX="45.0" layoutY="272.0" text="Address:">
                <font>
                   <Font name="Inter SemiBold" size="28.0" />
                </font>
             </Label>
-            <TextField layoutX="180.0" layoutY="270.0" prefHeight="35.0" prefWidth="450.0" />
-            <Label layoutX="710.0" layoutY="90.0" text="Email:">
+            <TextField layoutX="180.0" layoutY="270.0" prefHeight="41.0" prefWidth="526.0" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd">
+               <font>
+                  <Font size="21.0" />
+               </font></TextField>
+            <Label layoutX="783.0" layoutY="96.0" text="Email:">
                <font>
                   <Font name="Inter SemiBold" size="28.0" />
                </font>
             </Label>
-            <TextField layoutX="891.0" layoutY="90.0" prefHeight="35.0" prefWidth="450.0" />
-            <Label layoutX="710.0" layoutY="180.0" text="Password:">
+            <TextField layoutX="964.0" layoutY="90.0" prefHeight="35.0" prefWidth="521.0" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd">
+               <font>
+                  <Font name="Inter Regular" size="22.0" />
+               </font></TextField>
+            <Label layoutX="783.0" layoutY="186.0" text="Password:">
                <font>
                   <Font name="Inter SemiBold" size="28.0" />
                </font>
             </Label>
-            <TextField layoutX="891.0" layoutY="180.0" prefHeight="35.0" prefWidth="450.0" />
-            <Label layoutX="710.0" layoutY="270.0" text="Phone Num:">
+            <TextField layoutX="964.0" layoutY="180.0" prefHeight="35.0" prefWidth="521.0" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd">
+               <font>
+                  <Font size="22.0" />
+               </font></TextField>
+            <Label layoutX="783.0" layoutY="277.0" text="Phone Num:">
                <font>
                   <Font name="Inter SemiBold" size="28.0" />
                </font>
             </Label>
-            <TextField layoutX="891.0" layoutY="270.0" prefHeight="35.0" prefWidth="450.0" />
-            <Button layoutX="935.0" layoutY="320.0" mnemonicParsing="false" prefHeight="63.0" prefWidth="173.0" text="Edit">
+            <TextField layoutX="964.0" layoutY="270.0" prefHeight="35.0" prefWidth="520.0" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd">
                <font>
-                  <Font size="14.0" />
+                  <Font name="Inter Regular" size="22.0" />
+               </font></TextField>
+            <Button alignment="CENTER" contentDisplay="CENTER" layoutX="1227.0" layoutY="339.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="110.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="main_btn" text="Edit" textFill="WHITE">
+               <font>
+                  <Font name="Inter SemiBold" size="30.0" />
                </font>
             </Button>
-            <Button layoutX="700.0" layoutY="320.0" mnemonicParsing="false" prefHeight="63.0" prefWidth="173.0" text="Add">
+            <Button alignment="CENTER" contentDisplay="CENTER" layoutX="1092.0" layoutY="339.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="110.0" style="-fx-border-radius: 15; -fx-background-radius: 15;" styleClass="main_btn" text="Add" textFill="WHITE">
                <font>
-                  <Font size="14.0" />
+                  <Font name="Inter SemiBold" size="30.0" />
                </font>
             </Button>
-            <Button layoutX="1170.0" layoutY="320.0" mnemonicParsing="false" prefHeight="63.0" prefWidth="173.0" text="Save">
+            <Button alignment="CENTER" contentDisplay="CENTER" layoutX="1364.0" layoutY="339.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="115.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="main_btn" text="Save" textFill="WHITE">
                <font>
-                  <Font size="14.0" />
+                  <Font name="Inter SemiBold" size="30.0" />
                </font>
             </Button>
             <TableView layoutX="45.0" layoutY="417.0" prefHeight="471.0" prefWidth="1430.0">
@@ -135,23 +155,29 @@
                 <TableColumn prefWidth="75.0" text="C2" />
               </columns>
             </TableView>
-         </children>
-      </AnchorPane>
-      <AnchorPane fx:id="anchorBill" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0" visible="false">
-         <children>
-            <Label layoutX="25.0" layoutY="15.0" text="Product Detail">
+            <Label layoutX="47.0" layoutY="343.0" text="STAFF LIST">
                <font>
                   <Font name="Inter Bold" size="36.0" />
                </font>
             </Label>
-            <Line endX="1068.0" endY="-7.62939453125E-6" layoutX="412.0" layoutY="37.0" startX="-100.0" />
+            <Line endX="691.30078125" endY="-3.0517578125E-5" layoutX="368.0" layoutY="364.0" startX="-98.8504638671875" startY="-3.0517578125E-5" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="3.0" styleClass="line-color" />
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="anchorBill" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0" visible="false">
+         <children>
+            <Label layoutX="25.0" layoutY="15.0" text="PRODUCT DETAIL">
+               <font>
+                  <Font name="Inter Bold" size="36.0" />
+               </font>
+            </Label>
+            <Line endX="1068.0" endY="-7.62939453125E-6" layoutX="412.0" layoutY="37.0" startX="-50.049072265625" startY="-1.52587890625E-5" strokeWidth="3.0" styleClass="line-color" />
             <TableView layoutX="25.0" layoutY="68.0" prefHeight="360.0" prefWidth="1430.0">
               <columns>
                 <TableColumn prefWidth="75.0" text="C1" />
                 <TableColumn prefWidth="75.0" text="C2" />
               </columns>
             </TableView>
-            <Label layoutX="25.0" layoutY="450.0" text="Bill List">
+            <Label layoutX="25.0" layoutY="450.0" text="BILL LIST">
                <font>
                   <Font name="Inter Bold" size="36.0" />
                </font>
@@ -162,6 +188,7 @@
                 <TableColumn prefWidth="75.0" text="C2" />
               </columns>
             </TableView>
+            <Line endX="1170.89599609375" layoutX="303.0" layoutY="473.0" startX="-101.0706787109375" strokeWidth="3.0" styleClass="line-color" />
          </children>
       </AnchorPane>
    </children>
