--- a/src/main/resources/View/manager.fxml
+++ b/src/main/resources/View/manager.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
@@ -31,37 +32,33 @@
                <font>
                   <Font name="Inter SemiBold" size="19.0" />
                </font></Label>
-            <Button fx:id="homeButton" alignment="CENTER" contentDisplay="CENTER" layoutX="791.0" layoutY="2.0" mnemonicParsing="false" onAction="#anchorHomeappear" prefHeight="51.0" prefWidth="93.0" styleClass="selected_btn" text="Home">
+            <Avatar fx:id="ava" accessibleRole="IMAGE_VIEW" layoutX="1413.0" layoutY="14.0" />
+            <Button fx:id="homeBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="782.0" layoutY="1.0" mnemonicParsing="false" onAction="#anchorHomeappear" styleClass="selected-btn" text="Home">
                <font>
-                  <Font name="Inter Regular" size="22.0" />
+                  <Font size="28.0" />
                </font>
             </Button>
-            <Button fx:id="productButton" alignment="CENTER" contentDisplay="CENTER" layoutX="914.0" layoutY="5.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="111.0" styleClass="switch-btn" text="Product">
+            <Button fx:id="productBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="901.0" layoutY="3.0" mnemonicParsing="false" styleClass="switch-btn" text="Product">
                <font>
-                  <Font name="Inter Regular" size="22.0" />
+                  <Font size="26.0" />
                </font>
             </Button>
-            <Button fx:id="staffButton" alignment="CENTER" contentDisplay="CENTER" layoutX="1051.0" layoutY="5.0" mnemonicParsing="false" onAction="#anchorStaffappear" prefHeight="51.0" prefWidth="75.0" styleClass="switch-btn" text="Staff">
+            <Button fx:id="staffBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1031.0" layoutY="3.0" mnemonicParsing="false" onAction="#anchorStaffappear" styleClass="switch-btn" text="Staff">
                <font>
-                  <Font size="22.0" />
+                  <Font size="26.0" />
                </font>
             </Button>
-            <Button fx:id="billButton" alignment="CENTER" contentDisplay="CENTER" layoutX="1159.0" layoutY="5.0" mnemonicParsing="false" onAction="#anchorBillappear" prefHeight="51.0" prefWidth="60.0" styleClass="switch-btn" text="Bill">
+            <Button fx:id="billBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1130.0" layoutY="3.0" mnemonicParsing="false" onAction="#anchorBillappear" styleClass="switch-btn" text="Bill">
                <font>
-                  <Font name="Inter Regular" size="22.0" />
+                  <Font size="26.0" />
                </font>
             </Button>
-            <Avatar fx:id="ava" accessibleRole="IMAGE_VIEW" layoutX="1413.0" layoutY="14.0">
-               <image>
-                  <Image url="@../Picture/Ava.jpg" />
-               </image>
-            </Avatar>
-            <AnchorPane layoutX="792.0" layoutY="44.0" prefHeight="9.0" prefWidth="93.0" style="-fx-background-radius: 10;" styleClass="switch-pane" />
+            <Pane layoutX="789.0" layoutY="44.0" prefHeight="6.0" prefWidth="96.0" style="-fx-background-radius: 10;" styleClass="switch-pane" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="anchorHome" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0" visible="false">
          <children>
-            <DatePicker layoutX="32.0" layoutY="46.0" prefHeight="43.0" prefWidth="697.0" />
+            <DatePicker layoutX="32.0" layoutY="46.0" prefHeight="43.0" prefWidth="704.0" />
             <BarChart layoutX="14.0" layoutY="115.0" prefHeight="689.0" prefWidth="1478.0">
                <xAxis>
                   <CategoryAxis side="BOTTOM" />
@@ -72,7 +69,7 @@
             </BarChart>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="anchorStaff" layoutX="-14.0" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0" visible="false">
+      <AnchorPane fx:id="anchorStaff" layoutX="-14.0" layoutY="63.0" prefHeight="918.0" prefWidth="1512.0">
          <children>
             <Label layoutX="43.0" layoutY="15.0" text="STAFF INFORMATION">
                <font>
@@ -87,16 +84,16 @@
             </Label>
             <TextField layoutX="180.0" layoutY="90.0" prefHeight="35.0" prefWidth="528.0" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd">
                <font>
-                  <Font name="Inter Regular" size="22.0" />
+                  <Font name="Inter Medium" size="22.0" />
                </font></TextField>
-            <Label layoutX="45.0" layoutY="183.0" text="Staff ID:">
+            <Label layoutX="46.0" layoutY="185.0" text="Name:">
                <font>
                   <Font name="Inter SemiBold" size="28.0" />
                </font>
             </Label>
             <TextField layoutX="180.0" layoutY="180.0" prefHeight="43.0" prefWidth="526.0" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd">
                <font>
-                  <Font name="Inter Regular" size="22.0" />
+                  <Font name="Inter Medium" size="22.0" />
                </font></TextField>
             <Label layoutX="45.0" layoutY="272.0" text="Address:">
                <font>
@@ -105,7 +102,7 @@
             </Label>
             <TextField layoutX="180.0" layoutY="270.0" prefHeight="41.0" prefWidth="526.0" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd">
                <font>
-                  <Font size="21.0" />
+                  <Font name="Inter Medium" size="21.0" />
                </font></TextField>
             <Label layoutX="783.0" layoutY="96.0" text="Email:">
                <font>
@@ -114,7 +111,7 @@
             </Label>
             <TextField layoutX="964.0" layoutY="90.0" prefHeight="35.0" prefWidth="521.0" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd">
                <font>
-                  <Font name="Inter Regular" size="22.0" />
+                  <Font name="Inter Medium" size="22.0" />
                </font></TextField>
             <Label layoutX="783.0" layoutY="186.0" text="Password:">
                <font>
@@ -123,7 +120,7 @@
             </Label>
             <TextField layoutX="964.0" layoutY="180.0" prefHeight="35.0" prefWidth="521.0" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd">
                <font>
-                  <Font size="22.0" />
+                  <Font name="Inter Medium" size="22.0" />
                </font></TextField>
             <Label layoutX="783.0" layoutY="277.0" text="Phone Num:">
                <font>
@@ -132,7 +129,7 @@
             </Label>
             <TextField layoutX="964.0" layoutY="270.0" prefHeight="35.0" prefWidth="520.0" style="-fx-border-radius: 10; -fx-background-radius: 10;" styleClass="txtfd">
                <font>
-                  <Font name="Inter Regular" size="22.0" />
+                  <Font name="Inter Medium" size="22.0" />
                </font></TextField>
             <Button alignment="CENTER" contentDisplay="CENTER" layoutX="1227.0" layoutY="339.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="110.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="main_btn" text="Edit" textFill="WHITE">
                <font>
@@ -191,8 +188,9 @@
             <Line endX="1170.89599609375" layoutX="303.0" layoutY="473.0" startX="-101.0706787109375" strokeWidth="3.0" styleClass="line-color" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutY="63.0" prefHeight="918.0" prefWidth="1512.0">
+      <AnchorPane layoutY="63.0" prefHeight="918.0" prefWidth="1512.0" visible="false">
          <children>
+            <Button layoutX="555.0" layoutY="268.0" mnemonicParsing="false" onAction="#show" text="Choose" />
             <Label layoutX="25.0" layoutY="15.0" text="Product List">
                <font>
                   <Font name="Inter Bold" size="36.0" />
@@ -200,7 +198,6 @@
             </Label>
             <Line endX="1063.333251953125" layoutX="380.0" layoutY="37.0" startX="-100.0" />
             <ImageView fx:id="testImage" fitHeight="303.0" fitWidth="318.0" layoutX="132.0" layoutY="199.0" pickOnBounds="true" preserveRatio="true" />
-            <Button layoutX="555.0" layoutY="268.0" mnemonicParsing="false" onAction="#show" text="Choose" />
          </children>
       </AnchorPane>
    </children>
